[package]
name = "escli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elasticsearch = "8.15.0-alpha.1"
serde = "~1"
serde_json = "~1"
tokio = { version = "*", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
csv = "1.1"
